tests/baselines/reference/redeclaredProperty.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/redeclaredProperty.ts(7,12): error TS2729: Property 'b' is used before its initialization.


==== tests/cases/conformance/classes/propertyMemberDeclarations/redeclaredProperty.ts (1 errors) ====
    class Base {
      b = 1;
    }
    
    class Derived extends Base {
      b;
      d = this.b;
               ~
!!! error TS2729: Property 'b' is used before its initialization.
!!! related TS2728 tests/cases/conformance/classes/propertyMemberDeclarations/redeclaredProperty.ts:6:3: 'b' is declared here.
    
      constructor() {
        super();
        this.b = 2;
      }
    }
    